--- a/app.css
+++ b/app.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #ffe264;
+  background-color: #fff
   color: #444;
 }
 
